<resources>
    <string name="app_name">MUTUAL_LEVANTAMIENTO</string>
    <string name="menu__listado_levantamiento">LEVANTAMIENTO</string>
    <string name="menu_cierre">CIERRE MIGRACION</string>
    <string name="welcome_to_levantamiento_app">Bienvenido a Levantamiento App</string>
    <string name="button_login">INICIAR SESION</string>
    <string name="opcion_disponible">opcion disponible</string>
    <string name="action_logout">cerrar sesion</string>
    <string name="menu_nuevo">NUEVO LEVANTAMIENTO</string>
    <string name="ingrese_valor_hint">Ingrese Valor</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="ingrese_torre">Ingrese Torre</string>
    <string name="seleccione_estado">Seleccione Estado</string>
    <string name="seleccione_dia_de_interes">Seleccione estado del computador</string>
    <string name="seleccione_estado_del_computador">seleccione estado del computador</string>
    <string name="torre">Torre</string>
    <string name="piso">Piso</string>
    <string name="unidad">Unidad</string>
    <string name="sala">Sala</string>
    <string name="modelo">Modelo</string>
    <string-array name="estados">
        <item>Por Migrar</item>
        <item>Ya Migrado</item>
        <item>VDI</item>
        <item>SPARE</item>
    </string-array>
</resources>