<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listadoDeLevantamientos"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/menu__listado_levantamiento" />
        <item
            android:id="@+id/nav_nuevoLevantamientoFragment"
            android:icon="@drawable/outline_add_24"
            android:title="@string/menu_nuevo" />
        <item
            android:id="@+id/nav_finalizandoMigracionFragment"
            android:icon="@drawable/baseline_check_circle_outline_24"
            android:title="@string/menu_cierre" />
    </group>
</menu>